--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="skill-row">
       <h2 class="side">Gaming</h2>
       <img class="gamp" src="img/gam.gif" alt="game">
-      <p>Gaming is life....I wonder where I'd be without it...Aniketh,I can easily defeat you in clash royale</p>
+      <p>Gaming is life....I wonder where I'd be without it...Let's play</p>
     </div>
   </div>
   <hr>
